@@ -1,58 +1,90 @@
 package SITE.RECIPICK.RECIPICK_PROJECT.service;
 
 import SITE.RECIPICK.RECIPICK_PROJECT.dto.MainPostDto;
+import SITE.RECIPICK.RECIPICK_PROJECT.dto.PostDto;
 import SITE.RECIPICK.RECIPICK_PROJECT.entity.PostEntity;
 import SITE.RECIPICK.RECIPICK_PROJECT.repository.PostRepository;
+import SITE.RECIPICK.RECIPICK_PROJECT.repository.WeatherRecommendRepository;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class MainReadService {
 
   private final PostRepository repo;
+  private final KmaWeatherService kma;
+  private final WeatherRecommendRepository weatherRepo;
 
-  /**
-   * 오늘의 추천: 좋아요 → 조회수 → 생성일 내림차순, 이미지 있는 것만 상위 5
-   */
+  /** 오늘의 추천 (캐시된 날씨 기반 → 없으면 인기 fallback 5개, 네트워크 호출 없음) */
   public List<MainPostDto> todayTop5() {
-    return topNWithImage(5);
+    try {
+      // ✅ 네트워크 호출 금지: 캐시에 있으면 그 조건, 없으면 "normal"
+      String cond = kma.getCachedConditionOrNormal();
+      log.debug("[MAIN] cond={}", cond);
+
+      // cond별 추천
+      List<MainPostDto> list = switch (cond) {
+        case "rainy" -> mapDto(weatherRepo.rainyTop(5));
+        case "hot"   -> mapDto(weatherRepo.hotTop(5));
+        case "cold"  -> mapDto(weatherRepo.coldTop(5));
+        case "snowy" -> mapDto(weatherRepo.snowyTop(5));
+        default      -> List.of(); // normal이면 인기 보충으로
+      };
+
+      // normal이거나 결과가 비었으면, 캐시에 남아있는 최신 WeatherData로 온도 보정
+      var w = kma.lastCachedWeather();
+      if (list.isEmpty() && w != null) {
+        Double tempC = w.temp();
+        if (tempC != null) {
+          if (tempC >= 24) {
+            list = mapDto(weatherRepo.hotTop(5));
+          } else if (tempC <= 12) {
+            list = mapDto(weatherRepo.coldTop(5));
+          }
+        }
+      }
+
+      // 부족분은 인기에서 보충
+      list = list.isEmpty() ? topNWithImage(5) : fillFromPopular(list, 5);
+
+      log.debug("[MAIN] weather pick count={}", list.size());
+      return list;
+
+    } catch (Exception e) {
+      log.warn("[MAIN] todayTop5 예외. fallback 수행", e);
+      return topNWithImage(5);
+    }
   }
 
-  /**
-   * 인기 그리드: 좋아요 → 조회수 → 생성일 내림차순, 이미지 있는 것만 상위 8
-   */
+  /** 인기 그리드: 좋아요/조회수/작성일 내림차순 → 상위 8 */
   public List<MainPostDto> popularTop8() {
     return topNWithImage(8);
   }
 
-  // ===== 내부 공통 로직 =====
+  // ===== 공통 =====
+
   private List<MainPostDto> topNWithImage(int n) {
-    // 정렬: likeCount DESC, viewCount DESC, createdAt DESC
     Sort sort = Sort.by(
         Sort.Order.desc("likeCount"),
         Sort.Order.desc("viewCount"),
         Sort.Order.desc("createdAt")
     );
-
-    // 넉넉히 가져온 다음(예: 100개) 프리필터링
     Pageable page = PageRequest.of(0, Math.max(30, n * 5), sort);
 
     return repo.findAll(page).getContent().stream()
-        // 이미지 있는 것만
         .filter(e -> e.getRcpImgUrl() != null && !e.getRcpImgUrl().isBlank())
-        // (옵션) 정식 레시피만 보고 싶으면 주석 해제
-        // .filter(e -> Objects.equals(e.getRcpIsOfficial(), 1))
-        // 널 안전성 보정(혹시 like/view/createdAt이 널인 데이터가 있더라도 정렬 유지)
         .sorted((a, b) -> {
           int cmp1 = Integer.compare(nvl(b.getLikeCount()), nvl(a.getLikeCount()));
           if (cmp1 != 0) return cmp1;
@@ -62,11 +94,38 @@ public class MainReadService {
         })
         .limit(n)
         .map(MainReadService::toMainDto)
-        .collect(Collectors.toList());
+        .toList();
+  }
+
+  private List<MainPostDto> mapDto(List<PostDto> src) {
+    if (src == null) return List.of();
+    return src.stream()
+        .filter(d -> d.getRcpImgUrl() != null && !d.getRcpImgUrl().isBlank())
+        .limit(5)
+        .map(d -> new MainPostDto(
+            d.getId(),                 // PostDto의 @JsonProperty("id")가 postId를 돌려줌
+            safe(d.getTitle()),
+            safe(d.getFoodName()),
+            safe(d.getRcpImgUrl()),
+            nvl(d.getLikeCount()),
+            nvl(d.getViewCount())
+        ))
+        .toList();
+  }
+
+  private List<MainPostDto> fillFromPopular(List<MainPostDto> base, int target) {
+    var rest = topNWithImage(target * 2); // 넉넉히 뽑아서 중복 제거
+    Set<Integer> used = base.stream().map(MainPostDto::id).collect(Collectors.toSet());
+    var add = rest.stream()
+        .filter(p -> !used.contains(p.id()))
+        .limit(target - base.size())
+        .toList();
+    return java.util.stream.Stream.concat(base.stream(), add.stream()).toList();
   }
 
   private static int nvl(Integer v) { return v == null ? 0 : v; }
   private static LocalDateTime nvl(LocalDateTime v) { return v == null ? LocalDateTime.MIN : v; }
+  private static String safe(String s) { return s == null ? "" : s; }
 
   private static MainPostDto toMainDto(PostEntity e) {
     return new MainPostDto(
@@ -78,6 +137,4 @@ public class MainReadService {
         nvl(e.getViewCount())
     );
   }
-
-  private static String safe(String s) { return s == null ? "" : s; }
 }
